<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignUpStudentActivity"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        />

    <TextView
        android:id="@+id/txt_reminder"
        android:text="@string/enter_email_college_domain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_sign_up"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout_sign_up_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_reminder"
        android:hint="@string/enter_name"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_sign_up_stu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/admission_layout_sign_up_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_layout_sign_up_student"
        android:hint="@string/enter_admission_no"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_sign_up_stu_adm_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/branch_layout_sign_up_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admission_layout_sign_up_student"
        android:hint="@string/enter_branch"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_sign_up_stu_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hostel_layout_sign_up_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/branch_layout_sign_up_student"
        android:hint="@string/enter_hostel_name"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_sign_up_stu_hostel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout_sign_up_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hostel_layout_sign_up_student"
        android:hint="@string/enter_phone_no"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_sign_up_stu_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout_sign_up_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_layout_sign_up_student"
        android:hint="@string/enter_email"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_sign_up_stu_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_layout_sign_up_student"
        android:hint="@string/enter_password"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_sign_up_stu_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>

</ScrollView>
