<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        />

    <TextView
        android:id="@+id/txt_reminder"
        android:text="@string/enter_email_college_domain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_login"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_reminder"
        android:hint="@string/enter_email"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_layout"
        android:hint="@string/enter_password"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/line_view"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_below="@id/btn_login"/>

    <TextView
        android:id="@+id/txt_or"
        android:text="Or"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_view"/>

    <TextView
        android:id="@+id/txt_sign_up_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_or"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="2dp"
        android:padding="4dp"
        android:text="Sign up as student" />

    <TextView
        android:id="@+id/txt_sign_up_admin"
        android:text="Sign up as admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:padding="4dp"
        android:layout_below="@id/txt_or"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>